adding images and a paragraph

--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="styles/normalize.css">
     <title>responsive navigation</title>
-    <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 
 <body>
@@ -19,14 +18,19 @@
             <i class="fa-solid fa-bars"></i>
         </label>
         <ul>
-            <li><a class="active" href="#">home</a></li>
+            <li><a href="#">home</a></li>
             <li><a href="#">about</a></li>
             <li><a href="#">services</a></li>
             <li><a href="#">contact</a></li>
             <li><a href="#">feedback</a></li>
         </ul>
     </nav>
-
+    <section class="sect-one">
+        <img class="img-one" src="images/image-one.jpg" alt="laptop coding">
+        <img class="img-two" src="images/image-two.jpg" alt="monitor binary">
+        <p>Programming is the process of creating a set of instructions that tell a computer how to perform a task.
+            Programming can be done using a variety of computer programming languages, such as JavaScript, Python, and
+            C++...</p>
+    </section>
 </body>
-
 </html>
